[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hla6"
version = "1.0.0"
description = "HLA type imputation"
readme = "README.md"
requires-python = ">=3.12"

authors = [
  {name = "Han Sun", email = "hansun@stanford.edu"}
]

[project.urls]
"Homepage" = "https://github.com/HaniceSun/hla6"

[project.scripts]
hla6 = "hla6.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages]
find = { where = ["src"] }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
smart = ["data/*.txt*", "config/*.yaml"]
